--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "pycounts"
+name = "pycounts_Long_Nguyen_524"
 version = "0.1.0"
 description = "Calculate word counts in a text file!"
 authors = ["Long Nguyen"]
